[tool.poetry]
name = "ripix"
version = "2.5.0"
description = "A Rich-compatible library for writing pixel images and ASCII art to the terminal."
authors = ["Darren Burns <darrenb900@gmail.com>", "Romanin <semina054@gmail.com>"]
repository = "https://github.com/romanin-rf/ripix"
keywords = ["ripix", "rich", "textual", "image", "pixels", "ascii-art", "rich_pixels"]
readme = "README.md"
packages = [{ include = "ripix" }]
include = [
    "ripix/py.typed"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
rich = ">=13.5"
pillow = ">=9.5"
asyncio = ">=3.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.990"
syrupy = "^3.0.5"
importlib-metadata = "^5.0.0"
types-pillow = "^9.3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
